--- a/index.html
+++ b/index.html
@@ -23,13 +23,16 @@
                             <a href="">Header link three</a>
                         </nav>
                     </div>
-                    <div>
-                        <h1 class="title">This website is awesome</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore quaerat maxime natus, exercitationem minus, sit explicabo culpa, ut voluptatum dignissimos ducimus fugiat reprehenderit? Iste eius sint laudantium in nisi. Corrupti.</p>
-                        <button class="btn">Sign up</button>
-                    </div>
-                    <div>
-                        <img src="" alt="image">
+                    <div class="section1">
+
+                        <div>
+                            <h1 class="title">This website is awesome</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore quaerat maxime natus, exercitationem minus, sit explicabo culpa, ut voluptatum dignissimos ducimus fugiat reprehenderit? Iste eius sint laudantium in nisi. Corrupti.</p>
+                            <button class="btn">Sign up</button>
+                        </div>
+                        <div>
+                            <img class="img" src="https://img.freepik.com/free-photo/neon-tropical-monstera-leaf-banner_53876-138943.jpg?w=2000" alt="image">
+                        </div>
                     </div>
                 </div>
                 
