--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                         <div>
                             <h1 class="title">This website is awesome</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore quaerat maxime natus, exercitationem minus, sit explicabo culpa, ut voluptatum dignissimos ducimus fugiat reprehenderit? Iste eius sint laudantium in nisi. Corrupti.</p>
+                            <p class="para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore quaerat maxime natus, exercitationem minus, sit explicabo culpa, ut voluptatum dignissimos ducimus fugiat reprehenderit? Iste eius sint laudantium in nisi. Corrupti.</p>
                             <button class="btn">Sign up</button>
                         </div>
                         <div>
