--- a/index.html
+++ b/index.html
@@ -69,11 +69,12 @@
                 </div>
             </section>
             <div class="quotes">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit, quaerat ea! Reiciendis suscipit voluptatem quod atque nostrum. Asperiores perferendis neque tempora vero maiores, sit voluptatibus nobis, possimus magnam laboriosam repellat?</p>
-                <span>someonee</span>
-
+                <p class="para2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit, quaerat ea! Reiciendis suscipit voluptatem quod atque nostrum. Asperiores perferendis neque tempora vero maiores, sit voluptatibus nobis, possimus magnam laboriosam repellat?</p>
+                <div class="quote-auther">
+                    <span>-someone</span>
+                </div>
             </div>
-            
+           
             <section>
                 <div class="signup">
                     <strong>Call to action! its time!</strong>
