Adjust Quotes padding

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                 </div>
             </section>
             <div class="quotes">
-                <p class="para2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit, quaerat ea! Reiciendis suscipit voluptatem quod atque nostrum. Asperiores perferendis neque tempora vero maiores, sit voluptatibus nobis, possimus magnam laboriosam repellat?</p>
+                <p class="para2">If you set your goals ridiculously high and it's a failure, you will fail above everyone else's success</p>
                 <div class="quote-auther">
-                    <span>-someone</span>
+                    <span>-James CameronZ</span>
                 </div>
             </div>
            
