--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div class="section1">
 
                         <div>
-                            <h1 class="title">This website is awesome</h1>
+                            <h1 class="title">In Nature, Nothing Is Perfect And Everything Is Perfect</h1>
                             <p class="para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore quaerat maxime natus, exercitationem minus, sit explicabo culpa, ut voluptatum dignissimos ducimus fugiat reprehenderit? Iste eius sint laudantium in nisi. Corrupti.</p>
                             <button class="btn">Sign up</button>
                         </div>
@@ -42,26 +42,26 @@
                 <div class="section2">
 
                     <div class="random">
-                        <strong class="random-info">Some random information.</strong>
+                        <strong class="random-info">World of wonders</strong>
                     </div>
                     <div>
 
                         <div class="random-img">
                             <div>
                                 <img class="img-all" src="img/pexels-chevanon-photography-1108099.jpg" alt="dog-img">
-                                <p>This some subtext under an image</p>
+                                <p>Peaceful Puppies</p>
                             </div>
                             <div>
                                 <img class="img-all" src="img/pexels-george-lebada-567540.jpg" alt="camelion-img">
-                                <p>This some subtext under an image</p>
+                                <p>Colourful Chameleon</p>
                             </div>
                             <div>
                                 <img class="img-all" src="img/pexels-george-desipris-792381.jpg" alt="tiger-img">
-                                <p>This some subtext under an image</p>
+                                <p>Tiger Terror</p>
                             </div>
                             <div>
                                 <img class="img-all" src="img/pexels-pixabay-86596.jpg" alt="owl-img">
-                                <p>This some subtext under an image</p>
+                                <p>Obtrusive Owl</p>
                             </div>
                         </div>
                     
@@ -69,9 +69,9 @@
                 </div>
             </section>
             <div class="quotes">
-                <p class="para2">If you set your goals ridiculously high and it's a failure, you will fail above everyone else's success</p>
+                <p class="para2">"Rest is not idleness, and to lie sometimes on the grass under trees on a summer's day, listening to the murmur of the water, or watching the clouds float across the sky, is by no means a waste of time." </p>
                 <div class="quote-auther">
-                    <span>-James CameronZ</span>
+                    <span>- Sir John Lubbock</span>
                 </div>
             </div>
            
