Content and style adjustments

--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
                     
                 <div>
                     <div class="navbar">
-                        <span class="logo"><strong>Header Logo</strong></span>
+                        <span class="logo"><strong>Nature Lover</strong></span>
 
                         <nav class="nav">
-                            <a href="">Header link one</a>
-                            <a href="">Header link two</a>
-                            <a href="">Header link three</a>
+                            <a href="">Home</a>
+                            <a href="">Quotes</a>
+                            <a href="">Sign Up</a>
                         </nav>
                     </div>
                     <div class="section1">
 
-                        <div>
+                        <div class="description">
                             <h1 class="title">In Nature, Nothing Is Perfect And Everything Is Perfect</h1>
-                            <p class="para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore quaerat maxime natus, exercitationem minus, sit explicabo culpa, ut voluptatum dignissimos ducimus fugiat reprehenderit? Iste eius sint laudantium in nisi. Corrupti.</p>
+                            <p class="para">“Until one has loved an animal, a part of one's soul remains unawakened.”</p>
                             <button class="btn">Sign up</button>
                         </div>
-                        <div>
+                        <div class="fish">
                             <img class="img" src="img/pexels-chevanon-photography-1335971.jpg" alt="fish-img">
                         </div>
                     </div>
@@ -49,19 +49,19 @@
                         <div class="random-img">
                             <div>
                                 <img class="img-all" src="img/pexels-chevanon-photography-1108099.jpg" alt="dog-img">
-                                <p>Peaceful Puppies</p>
+                                <p class="img-description">Peaceful Puppies</p>
                             </div>
                             <div>
                                 <img class="img-all" src="img/pexels-george-lebada-567540.jpg" alt="camelion-img">
-                                <p>Colourful Chameleon</p>
+                                <p class="img-description">Colourful Chameleon</p>
                             </div>
                             <div>
                                 <img class="img-all" src="img/pexels-george-desipris-792381.jpg" alt="tiger-img">
-                                <p>Tiger Terror</p>
+                                <p class="img-description">Tiger Terror</p>
                             </div>
                             <div>
                                 <img class="img-all" src="img/pexels-pixabay-86596.jpg" alt="owl-img">
-                                <p>Obtrusive Owl</p>
+                                <p class="img-description">Obtrusive Owl</p>
                             </div>
                         </div>
                     
