change background colors

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <section>
                 <div class="signup">
                     <strong>Call to action! its time!</strong>
-                    <p>Sign up for our product</p>
+                    <p>Sign up and Explore</p>
                     <button class="btn2">Sign up</button>
 
                 </div>
@@ -87,8 +87,8 @@
             </section>
             
             <footer>
-                <div class="foter">
-                    <span>Copyright @AjayK 2023</span>
+                <div class="footer">
+                    <p>Copyright @AjayK 2023</p>
 
                 </div>
                 
